--- a/webviewer_flutter/pubspec.yaml
+++ b/webviewer_flutter/pubspec.yaml
@@ -28,14 +28,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  dartleaf: ^1.1.4
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_map: ^6.0.1  # Use the latest version of flutter_map
+  latlong2: ^0.9.0
+  flutter_map_cancellable_tile_provider: ^1.0.0
 
 dev_dependencies:
   flutter_test:
