--- a/webviewer_flutter/.vscode/launch.json
+++ b/webviewer_flutter/.vscode/launch.json
@@ -15,7 +15,7 @@
             "name": "Flutter Web",
             "request": "launch",
             "type": "dart",
-            "program": "main.dart",
+            "program": "lib/main.dart",
             "args": [
               "--web-port",
               "63427"  // Specify the desired port number here
