--- a/webviewer_flutter/pubspec.yaml
+++ b/webviewer_flutter/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   flutter_map: ^6.0.1  # Use the latest version of flutter_map
   latlong2: ^0.9.0
   flutter_map_cancellable_tile_provider: ^1.0.0
-
+  provider: ^6.1.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,6 +65,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - data/gebieden.geojson
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
